--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Andras's test site</title>
-	<link rel="stylesheet" type="text/css" href="main/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&amp;subset=latin-ext" rel="stylesheet">
   </head>
 <body>
@@ -22,7 +22,7 @@
         </ul>
       </div>	
 	<div class="author-box">
-            <img src="main/img/en1.jpeg" alt="Author photo">
+            <img src="en1.jpeg" alt="Author photo">
             <p class="author-text">Andras</p>
         </div>
     </div>    
